2013-10-17  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-22)

	* Fix plot.mkinfit as it passed graphical arguments like main to the solver
	* Do not use plot=TRUE in mkinfit example
	* The first successful fits in the not so simple GUI
	* Fix iteratively reweighted least squares for the case of many metabolites

2013-10-16  Johannes Ranke<jranke@uni-bremen.de> for mkin (0.9-22)

	* Unify naming of initial values of state variables
	* Unify naming in dataframes of optimised and fixed parameters in the summary

2013-10-10  Johannes Ranke<jranke@uni-bremen.de> for mkin (0.9-22)

	* Show the weighting method for residuals in the summary
	* Correct the output of the data in the case of manual weighting
	* Implement IRLS assuming different variances for observed variables


2013-10-09  Johannes Ranke for version (0.9-22)

	* Do not use 0 values at time zero for chi2 error level calculations.
	  This is the way it is done in KinGUII and it makes sense

Changes performed in earlier versions are documented in the subversion log
files on R-Forge http://www.r-forge.r-project.org/scm/?group_id=615
vim: set noexpandtab ts=2 sw=2: