@@ -1,3 +1,9 @@
+2013-10-21  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-22)
+
+	* Get rid of the optimisation step in mkinerrmin - this was unnecessary
+	  Thanks to KinGUII for the inspiration - actually this is equation 6-2 
+		in FOCUS kinetics p. 91 that I had overlooked originally
+
 2013-10-17  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-22)
 
 	* Fix plot.mkinfit as it passed graphical arguments like main to the solver
@@ -16,11 +22,13 @@
 	* Correct the output of the data in the case of manual weighting
 	* Implement IRLS assuming different variances for observed variables
 
-
 2013-10-09  Johannes Ranke for version (0.9-22)
 
 	* Do not use 0 values at time zero for chi2 error level calculations.
-	  This is the way it is done in KinGUII and it makes sense
+	  This is the way it is done in KinGUII and it makes sense. It does
+		impact the chi2 error levels in the output. Generally they seem to be
+		lower for metabolites now, presumably because the mean of the observed
+		values is higher
 
 Changes performed in earlier versions are documented in the subversion log
 files on R-Forge http://www.r-forge.r-project.org/scm/?group_id=615
